<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout
        android:id="@+id/profil_layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >
		<RelativeLayout 
		    android:id="@+id/profil_nom_prenom_layout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
		    <TextView 
		        android:id="@+id/profil_nom_prenom_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:textStyle="bold"
		        android:text="@string/profil_nom_prenom"/>
		    <TextView 
		        android:id="@+id/profil_nom_prenom_item"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:text="@null"/> 
		</RelativeLayout>
		<RelativeLayout 
		    android:id="@+id/profil_code_permanent_layout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
		    <TextView 
		        android:id="@+id/profil_code_permanent_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:textStyle="bold"
		        android:text="@string/profil_code_permanent"/>
		    <TextView 
		        android:id="@+id/profil_code_permanent_item"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:text="@null"/> 
		</RelativeLayout>
		<RelativeLayout 
		    android:id="@+id/solde_layout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
		    <TextView 
		        android:id="@+id/profil_solde_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:textStyle="bold"
		        android:text="@string/profil_solde"/>
		    <TextView 
		        android:id="@+id/profil_solde_item"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:text="@null"/> 
		</RelativeLayout>
		<RelativeLayout 
		    android:id="@+id/profil_programme_layout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
		    <TextView 
		        android:id="@+id/profil_programme_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:textStyle="bold"
		        android:text="@string/profil_programme"/>
		    <TextView 
		        android:id="@+id/profil_programme_item"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:text="@null"/> 
		</RelativeLayout>
		<RelativeLayout 
		    android:id="@+id/profil_credit_reussis_layout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
		    <TextView 
		        android:id="@+id/profil_credit_reussis_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:textStyle="bold"
		        android:text="@string/profil_credit_reussis"/>
		    <TextView 
		        android:id="@+id/profil_credit_reussis_item"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:text="@null"/> 
		</RelativeLayout>
		<RelativeLayout 
		    android:id="@+id/profil_credit_echoue_layout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
		    <TextView 
		        android:id="@+id/profil_credit_echoue_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:textStyle="bold"
		        android:text="@string/profil_cours_echoue"/>
		    <TextView 
		        android:id="@+id/profil_credit_echoue_item"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:text="@null"/> 
		</RelativeLayout>
		<RelativeLayout 
		    android:id="@+id/profil_credit_inscrit_layout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
		    <TextView 
		        android:id="@+id/profil_credit_inscrit_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:textStyle="bold"
		        android:text="@string/profil_credit_inscrit"/>
		    <TextView 
		        android:id="@+id/profil_credit_inscrit_item"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:text="@null"/> 
		</RelativeLayout>
		<RelativeLayout 
		    android:id="@+id/profil_moyenne_layout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
		    <TextView 
		        android:id="@+id/profil_moyenne_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:textStyle="bold"
		        android:text="@string/profil_moyenne"/>
		    <TextView 
		        android:id="@+id/profil_moyenne_item"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:text="@null"/> 
		</RelativeLayout>
	</LinearLayout>
	<Button 
	    android:id="@+id/profil_button_logout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:background="@color/black_gray"
	    android:textColor="@color/gray"
	    android:text="@string/profil_logout" />
</RelativeLayout>
